syntax = "proto3";
option go_package = "tq/pb";

package pb;

enum JobState {
  JOB_STATE_NONE = 0;
  JOB_STATE_RUN = 1;
  JOB_STATE_DONE_OK = 2;
  JOB_STATE_DONE_ERR = 3;
  JOB_STATE_DONE_CANCEL = 4;
}

message JobStatus {
  JobState job_state = 1;
  uint32 num = 2;
  float progress = 3;
  repeated string msg = 4;
}

enum JobControl {
  JOB_CONTROL_NONE = 0;
  JOB_CONTROL_CONTINUE = 1;
  JOB_CONTROL_NEW = 2;
  JOB_CONTROL_CANCEL = 3;
}

enum JobKind {
  JOB_KIND_NULL = 0;
  JOB_KIND_TEST = 1;
  JOB_KIND_SLEEP = 2;
  JOB_KIND_FFMPEG = 3;
}

message Job {
  JobKind kind = 1;
  uint32 num = 2;
  string name = 3;
  map<string, string> parms = 4;
}

